--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background: url('/dist/img/solar.jpg') no-repeat;
+    background: url('../dist/img/solar.jpg') no-repeat;
     font-family: 'Catamaran', sans-serif;
     line-height: 1.6;
     color: #333;
