--- a/css/style.css
+++ b/css/style.css
@@ -161,9 +161,10 @@ span {
 
 /* Reports */
 .section-c .container {
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 3rem;
+    grid-gap: 3rem; */
+    height: 32rem;
     /* align-items: center; */
     /* justify-content: center; */
     /* margin-bottom: 4rem; */
